--- a/app/src/main/res/layout/fragment_custom_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_custom_order_frag2.xml
@@ -65,9 +65,9 @@
 
 
     <ImageView
-        android:layout_width="168dp"
+        android:layout_width="120dp"
         android:id="@+id/selected_product"
-        android:layout_height="168dp"
+        android:layout_height="120dp"
         android:layout_gravity="center"
         android:layout_margin="15dp"
         />
@@ -128,31 +128,6 @@
 
         </LinearLayout>
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:textSize="14sp"
-                android:fontFamily="@font/catamaran"
-                android:layout_marginLeft="15dp"
-                android:hint="PURITY :"
-                android:layout_height="wrap_content" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_weight="2"
-                android:id="@+id/purity"
-                android:textColor="@color/black"
-                android:fontFamily="@font/catamaran"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
-
     </LinearLayout>
 
 
@@ -160,7 +135,8 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:id="@+id/confirm_butn"
-       android:layout_margin="20dp"
+        android:layout_margin="20dp"
+        android:textColor="@color/white"
         android:background="@drawable/green_colour_button"
         android:text="CONFIRM"
         android:layout_gravity="center"/>
@@ -185,6 +161,38 @@
         android:textColorHint="@color/skyBlue"
         android:layout_alignParentBottom="true"/>
 
+  <!--  <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="5dp"
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:id="@+id/cancel"
+            android:layout_height="wrap_content"
+            android:background="@drawable/gray_backround_design"
+            android:textAppearance="@style/customer_nu"
+            android:hint="Cancel"
+            android:elevation="8dp"
+            android:textColorHint="@color/skyBlue"
+            android:layout_alignParentBottom="true"/>
+
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:id="@+id/confirm"
+            android:layout_height="wrap_content"
+            android:background="@drawable/light_blue_background"
+            android:textAppearance="@style/customer_nu"
+            android:hint="Confirm"
+            android:elevation="8dp"
+            android:textColorHint="@color/skyBlue"
+            android:layout_alignParentBottom="true"/>
+
+    </LinearLayout>-->
 
 
 
