--- a/app/src/main/res/layout/fragment_customize_order_frag2.xml
+++ b/app/src/main/res/layout/fragment_customize_order_frag2.xml
@@ -48,6 +48,7 @@
                         android:layout_height="40dp"
                         android:paddingLeft="4dp"
                         android:editable="false"
+                        android:focusable="false"
                         android:layout_weight="2"
                         android:background="@drawable/light_blue_background"
                         android:inputType="text"
@@ -55,7 +56,6 @@
                         android:singleLine="true"
                         android:textColor="#000"
                         android:textSize="16sp" />
-
 
             </LinearLayout>
 
@@ -88,6 +88,8 @@
                         android:layout_width="match_parent"
                         android:background="@drawable/light_blue_background"
                         android:layout_height="40dp"
+                        android:editable="false"
+                        android:focusable="false"
                         android:gravity="center|start"
                         android:paddingLeft="5dp"
                         android:maxLines="1"
@@ -112,6 +114,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textStyle="italic"
+            android:id="@+id/gwt_text"
             android:layout_marginBottom="4dp"
             android:text="@string/gross"
             android:textAppearance="@style/customer_nu"
@@ -194,6 +197,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:textStyle="italic"
+                        android:id="@+id/dynamic_spec"
                         android:layout_marginBottom="4dp"
                         android:text="@string/size"
                         android:textAppearance="@style/customer_nu"
@@ -331,6 +335,7 @@
              <ImageView
                  android:layout_width="120dp"
                  android:elevation="2dp"
+                 android:id="@+id/reference_image"
                  android:visibility="gone"
                  android:layout_height="120dp"
                  android:layout_gravity="center"/>
@@ -338,6 +343,7 @@
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="32dp"
+                android:id="@+id/reference_image_btn"
                android:layout_margin="32dp"
                 android:hint="UPLOAD REFERENCE IMAGE"
                 android:textAppearance="@style/customer_nu"
