--- a/app/src/main/res/layout/fragments_customize_order_frag1.xml
+++ b/app/src/main/res/layout/fragments_customize_order_frag1.xml
@@ -37,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
+            android:elevation="2dp"
             android:layout_marginBottom="15dp">
 
 
@@ -252,6 +253,7 @@
         android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
         android:textSize="15dp"
+        android:textColor="@color/white"
         android:background="@color/whish"
         android:hint="NEXT"
         android:textColorHint="@color/white" />
