--- a/app/src/main/res/layout/spinner_layout.xml
+++ b/app/src/main/res/layout/spinner_layout.xml
@@ -9,24 +9,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+      android:layout_marginLeft="15dp"
+        android:layout_marginRight="15dp"
+      android:layout_marginTop="5dp"
+      android:layout_marginBottom="5dp"
+        android:elevation="2dp"
+        android:background="@drawable/gray_backround_design"
         android:orientation="horizontal"
-        android:layout_marginRight="30dp"
+
        >
 
         <Spinner
 
             android:id="@+id/dynamic_spinner"
             android:layout_width="match_parent"
-            android:layout_height="30dp"
+            android:layout_height="35dp"
             />
 
-
     </LinearLayout>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:id="@+id/add_image"
-        android:layout_centerInParent="true"
-        android:background="@drawable/add_gray" />
+
 </RelativeLayout>
