--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="hint">#4A4A4A</color>
     <color name="light_blue">#F3F7FB</color>
     <color name="offline_colour">#F4F4F4</color>
+    <color name="card_background">#F4F4F4</color>
 
 
 
