--- a/app/src/main/res/layout/fragment_company_profile_.xml
+++ b/app/src/main/res/layout/fragment_company_profile_.xml
@@ -5,12 +5,48 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.Company_profile_Fragment">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/update_company_layout">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:layout_marginHorizontal="10dp"
-        android:layout_above="@+id/update_company_layout">
+       >
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+            <!--<ImageView
+                android:id="@+id/profile_logo"
+                android:layout_width="72dp"
+                android:layout_height="72dp"
+                android:layout_gravity="center_horizontal"
+                android:src="@drawable/circle" />-->
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/company_logo"
+                android:layout_width="72dp"
+                android:layout_gravity="center"
+                android:src="@drawable/logo_image"
+                android:layout_centerInParent="true"
+                android:layout_height="72dp"
+                />
+
+            <TextView
+                android:id="@+id/logo_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="10dp"
+                android:fontFamily="@font/roboto_thin"
+                android:text="Upload Company Logo"
+                android:textColor=" #275190"
+                android:textSize="14sp" />
+        </LinearLayout>
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -188,6 +224,7 @@
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
+    </ScrollView>
     <LinearLayout
         android:id="@+id/update_company_layout"
         android:layout_width="match_parent"
