--- a/app/src/main/res/layout/fragment_displaying_complet_product_fragment1.xml
+++ b/app/src/main/res/layout/fragment_displaying_complet_product_fragment1.xml
@@ -7,7 +7,6 @@ android:layout_width="match_parent"
 android:id="@+id/main2"
 android:focusableInTouchMode="true"
 android:layout_height="match_parent"
-android:background="@color/white"
 tools:context=".Fragments.DisplayingCompletProduct_fragment1">
 
 <LinearLayout
@@ -146,19 +145,55 @@ tools:context=".Fragments.DisplayingCompletProduct_fragment1">
                             android:src="@drawable/make" />
                     </LinearLayout>
 
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_marginTop="15dp"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/p_name"
+                            android:textStyle="bold"
+                            android:fontFamily="@font/roboto_font"
+                            android:textAppearance="@style/product_name"
+                           android:layout_marginLeft="25dp"
+                          />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="25dp"
+                            android:id="@+id/sku"
+                            android:layout_below="@+id/p_name"
+                           android:textAppearance="@style/heading1"
+                          />
+
+                        <Button
+                            android:layout_width="wrap_content"
+                            android:layout_height="35dp"
+                            android:id="@+id/varients_button"
+                            android:paddingLeft="15dp"
+                            android:paddingRight="15dp"
+                            android:layout_marginRight="15dp"
+                            android:text="Show Variants"
+                            android:background="@drawable/gray_backround_design"
+                            android:layout_alignParentRight="true"/>
+                    </RelativeLayout>
+
+
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:background="@color/card_background"
+                        android:layout_marginTop="15dp"
                         android:layout_below="@+id/tabl">
-
-
-
 
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/main2recycler"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:background="@color/white"
                             android:orientation="vertical">
 
                         </android.support.v7.widget.RecyclerView>
