--- a/app/src/main/res/layout/update_product_main_layout.xml
+++ b/app/src/main/res/layout/update_product_main_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -27,11 +28,8 @@
             android:textAppearance="@style/item"
             android:textStyle="bold"
             android:layout_gravity="center_vertical"
-            android:text="Title"
             android:id="@+id/heading_textview"
-
             android:textSize="15sp"/>
-
     </RelativeLayout>
 
     <android.support.v7.widget.RecyclerView
