--- a/app/src/main/res/layout/fragment_company_profile_.xml
+++ b/app/src/main/res/layout/fragment_company_profile_.xml
@@ -137,7 +137,9 @@
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:text="UPLOAD GSTIN"
-               android:clickable="false"
+
+               android:enabled="false"
+
                />
     <android.support.v7.widget.CardView
 
@@ -185,6 +187,7 @@
             android:layout_height="45dp"
             android:layout_marginTop="20dp"
             android:text="UPLOAD CIN"
+            android:enabled="false"
             />
         <TextView
             android:layout_width="match_parent"
