--- a/app/src/main/res/layout/fragment_user_settings.xml
+++ b/app/src/main/res/layout/fragment_user_settings.xml
@@ -8,13 +8,16 @@
     tools:context=".Fragments.UserSettings">
 
     <ScrollView
+        android:id="@+id/scrollseal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/user_submit_layout"
+
 
         >
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical"
             android:layout_marginTop="20dp"
 
@@ -79,6 +82,7 @@
                         android:scrollbars="vertical"
                         android:isScrollContainer="true"
                         android:layout_marginBottom="20dp"
+                        android:descendantFocusability="beforeDescendants"
                         tools:itemCount="20" />
 
                 </LinearLayout>
@@ -111,6 +115,7 @@
                         android:layout_marginTop="15dp"
                         android:id="@+id/relative"
                         android:layout_marginBottom="15dp">
+
                         <com.example.compaq.b2b_application.chips_package.RecipientEditTextView
                             android:id="@+id/tag_input"
                             android:layout_width="match_parent"
@@ -124,8 +129,7 @@
                             app:chipBackground="@drawable/chip_background_drawable"
                             app:chipBackgroundPressed="@drawable/chip_background_drawable_pressed"
                             app:chipDelete="@drawable/baseline_cancel_white_48dp"
-                            app:chipIcon="@drawable/ic_contact_picture"
-                            >
+                            app:chipIcon="@drawable/ic_contact_picture">
 
                         </com.example.compaq.b2b_application.chips_package.RecipientEditTextView>
 
@@ -143,7 +147,8 @@
             android:id="@+id/zoom_card"
             android:elevation="5dp"
             android:background="@color/white"
-            android:layout_marginTop="20dp">
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="50dp">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -161,7 +166,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="15dp"
-                android:layout_marginBottom="15dp">
+                >
 
                 <CheckBox
                     android:id="@+id/zoom_checkbox"
@@ -181,6 +186,7 @@
         android:id="@+id/user_submit_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
         android:orientation="vertical"
         android:layout_alignParentBottom="true">
         <Button
